--- a/README.mv
+++ b/README.mv
@@ -13,6 +13,26 @@ Goals:
 -Make it so that Goombas can travel on top of pipes. 
 -Fix the forementioned bug
 -Make it so at the beginning of the game mario starts in the center
+
+
+Dhiraj Patel:
+New Features:
+- Mario able to obtain a green 1-UP powerup now
+- if mario has 1-up powerup, he can survive pit death, and enemy death
+- Made new option for the bricks, called the Ice Flower
+- if mario obtains iceFlower, then the picture chnages to iceSuit Mario.
+Bugs Added:
+- made it laggy, when Mario touched bottom of pits, because it took a long
+time for brick to make decision if  its red / green.
+Bugs Fixed:
+- no longer laggy, new if blocks
+Goals:
+-make iceballs come out of iceSuit Mario;
+- make firesuit mario;
+- make fireballs come out of firesuit mario;
+
+
+
 -1/20/16:
 -Ely Sandine
 -New Features:
